Fix typing effect casue home section overflow

--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ a:visited {
     border-right: .15em solid rgb(150, 150, 150);
     white-space: nowrap;
     margin: 0 auto;
-    letter-spacing: .15em;
+    letter-spacing: .05em;
     animation: typing 2.5s steps(40, end), blink-caret .75s step-end infinite;
 }
 
